--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,26 @@
-.github/workflows/main.yml
+on:
+  schedule:
+    - cron: "0 0 * * *" # Обновление раз в день
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: Platane/snk@v3
+        with:
+          github_user_name: ${{ github.repository_owner }} # Использует твое имя пользователя
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Токен для доступа к API GitHub
+
+      - name: Push to WastedSwl (main branch)
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output # Создаст ветку output, если ее нет
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
