--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,18 +2,19 @@ name: Generate GitHub Snake
 
 on:
   schedule:
-    # Запускать каждые 12 часов
+    # Запускать каждые 12 часов (можно изменить, например, "0 */6 * * *" для каждых 6 часов)
     - cron: "0 */12 * * *"
   workflow_dispatch: # Позволяет запускать вручную из вкладки Actions
   push:
     branches:
-      - main # Или master, в зависимости от вашей основной ветки
+      - main # Убедитесь, что это ваша основная ветка (может быть 'master')
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+    # Эти права КРИТИЧЕСКИ важны, чтобы Action мог коммитить файлы обратно в репозиторий
     permissions:
-      contents: write # Необходимо для коммита изменений
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -22,22 +23,21 @@ jobs:
       - name: Generate Snake animation
         uses: Platane/snk@v3.3.0
         with:
-          github_user_name: ${{ github.repository_owner }} # Автоматически подставит ваш ник
-          # Список выходов. Вы можете настроить несколько вариантов.
-          # Формат: <output_path>?palette=<palette_name>&color_snake=<color_name_or_hex>&color_dots=<color_name_or_hex_comma_separated>
+          github_user_name: ${{ github.repository_owner }} # Автоматически подставит ваш ник (wastedswl)
+          # Список выходных файлов. Убедитесь, что путь здесь соответствует тому, что вы ожидаете.
+          # Я рекомендую использовать папку 'dist' для сгенерированных файлов.
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#bfd7ff,#82b1ff,#6495ed,#4682b4,#00509d
             dist/ocean.svg?color_snake=orange&color_dots=#bfd7ff,#82b1ff,#6495ed,#4682b4,#00509d
-        # Action Platane/snk@v3 сам коммитит и пушит изменения,
-        # если указан GITHUB_TOKEN (он по умолчанию доступен и имеет нужные права при `permissions: contents: write`)
-
-      # Если Platane/snk@v3 не коммитит автоматически или вы хотите больше контроля:
+        # Action Platane/snk@v3 должен сам коммитить изменения.
+        # Если этого не происходит, раскомментируйте следующий шаг:
       # - name: Commit and push changes
+      #   if: ${{ success() }} # Запускать только если предыдущий шаг успешен
       #   uses: EndBug/add-and-commit@v9
       #   with:
       #     author_name: github-actions[bot]
-      #     author_email: github-actions[bot]@users.noreply.github.com
-      #     message: "chore: generate contribution snake"
-      #     add: 'dist/*.svg' # Добавляем все сгенерированные SVG
+      #     author_email: 41898282+github-actions[bot]@users.noreply.github.com
+      #     message: "docs: generate contribution snake 🐍"
+      #     add: 'dist/*.svg' # Добавляем все сгенерированные SVG из папки dist
       #     push: true
